QWindowsVistaStyle: Restore altered brush origin.

The line to restore it was missing, and the leftover variable
caused a warning, which was removed in
abe5a0a432116963d22c4ef501a4dfd2393d66fb .

Task-number: QTBUG-27828

Change-Id: I00b8b89b07bec38a1660c3a9c61220b6d0d7eb48
Reviewed-by: Miikka Heikkinen <miikka.heikkinen@digia.com>